# cuda-convolution

./: .gitignore  CMakeLists.txt  README.md  convolutions.py
src/: compile.sh  convolution.cu  convolution2D.cu
src/core/: convolution.cuh  convolution1d.cu  convolution1d.cuh  convolution2d.cu  convolution2d.cuh
src/core/convolution/: wrapper.cpp
src/core/convolution/1d/: convolution1d.cu  kernel.cu
src/core/convolution/2d/: convolution2d.cu  convolution2d.cuh  kernel.cu
src/core/convolution/3d/: convolution3d.cu  convolution3d.cuh  kernel.cu
src/core/convolution/any/: convolution.cuh
src/debug/: convolution1d_debug.cpp  convolution2d_debug.cpp  convolution3d_debug.cpp
